Add .proto build script for powershell.

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,8 @@ indent_size = 2
 
 [*.go]
 indent_style = tab
+
+[*.ps1]
+# https://github.com/PoshCode/PowerShellPracticeAndStyle
+end_of_line = crlf
+indent_size = 4
