Add openvdc CLI stub based on "github.com/spf13/cobra".

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,13 +2,15 @@
   "version": "0.1.0",
   "command": "go",
   "isShellCommand": true,
-  "showOutput": "silent",
+  "echoCommand": true,
   "tasks": [
     {
-      "taskName": "build",
+      "taskName": "Build",
       "args": [
-        "-o", "scheduler/scheduler", "scheduler/main.go"
+        "build", "-v", "./cmd/openvdc"
       ],
+      "suppressTaskName": true,
+      "problemMatcher": ["$go"],
       "isBuildCommand": true
     }
   ]
