--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,13 +6,9 @@
       "type": "go",
       "request": "launch",
       "mode": "debug",
-      "remotePath": "",
-      "port": 2345,
-      "host": "127.0.0.1",
       "program": "${workspaceRoot}",
       "env": {},
-      "args": [],
-      "showLog": true
+      "args": []
     }
   ]
 }
