--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -1,5 +1,6 @@
 {
   "version": "0.1.0",
+  "command": "${workspaceRoot}/build.sh",
   "windows": {
     "command": "powershell",
     "args":["-ExecutionPolicy", "Bypass", "${workspaceRoot}\\build.ps1"]
