--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "EditorConfig.EditorConfig",
     "lukehoban.go",
-    "zxh404.vscode-proto3"
+    "zxh404.vscode-proto3",
+    "1dot75cm.RPMSpec"
   ]
 }
