Add Dockerfile VSCode extension.

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "EditorConfig.EditorConfig",
     "lukehoban.go",
     "zxh404.vscode-proto3",
-    "1dot75cm.RPMSpec"
+    "1dot75cm.RPMSpec",
+    "PeterJausovec.vscode-docker"
   ]
 }
