template: Remove “$schema” key from bundled templates.
That helps VSCode to apply local development JSON schema.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,13 @@
   "search.exclude": {
     "vendor/**": true,
     "vendor/vendor.json": false
-  }
+  },
+  "json.schemas": [
+    {
+      "fileMatch": [
+        "/templates/**/*.json"
+      ],
+      "url": "./schema/v1.json"
+    }
+  ]
 }
