--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,6 +6,9 @@ shallow_clone: true
 environment:
   GOPATH: C:\gopath
 
+cache:
+  - '%GOPATH%\.cache -> vendor\vendor.json'
+
 platform:
   - x64
 
