Re-arranged the environment variables so we don't create a new docker layer every time

--- a/ci/acceptance-test/Dockerfile
+++ b/ci/acceptance-test/Dockerfile
@@ -1,13 +1,15 @@
 FROM centos:7
 
+#TODO: Set user
+#TODO: Set workdir to user home
+#TODO: Set name
+
+ENV BRANCH=acceptance-test RELEASE_SUFFIX=current REBUILD=false
+
 VOLUME /data2
 
 RUN ["yum", "install", "-y", "epel-release"]
 RUN ["yum", "install", "-y", "rsync", "bridge-utils", "qemu-kvm", "qemu-system-x86", "parted", "sudo", "openssh-clients", "nmap-ncat"]
-
-ENV BRANCH=acceptance-test
-ENV RELEASE_SUFFIX=current
-ENV REBUILD=false
 
 ADD ["openvdc.repo", "/etc/yum.repos.d/openvdc.repo"]
 RUN ["yum", "install", "-y", "openvdc-acceptance-test"]
