Added a required RUN argument to the run_tests.sh script so people who don't know what they're doing don't run it accidentally

--- a/ci/acceptance-test/Dockerfile
+++ b/ci/acceptance-test/Dockerfile
@@ -29,4 +29,4 @@ LABEL "jp.axsh.vendor"="Axsh Co. LTD"  \
 COPY ["multibox", "/multibox"]
 COPY ["run_tests.sh", "run_tests.sh"]
 
-ENTRYPOINT ["./run_tests.sh"]
+ENTRYPOINT ["./run_tests.sh", "RUN"]
