Removed the unused scheduler environment file. We'll use a config file instead. Also fixed a capitalization error

--- a/pkg/rhel/openvdc-scheduler.service
+++ b/pkg/rhel/openvdc-scheduler.service
@@ -1,9 +1,8 @@
 [Unit]
-Description=OpenVDc scheduler
+Description=OpenVDC scheduler
 After=network.target
 
 [Service]
-EnvironmentFile=/etc/sysconfig/openvdc
 ExecStart=/opt/axsh/openvdc/bin/openvdc-scheduler 
 
 
