--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -1,6 +1,6 @@
 [hypervisor]
-# driver = null
-script-path="/etc/openvdc/scripts/"
+# driver = "null"
+script-path = "/etc/openvdc/scripts/"
 
 [zookeeper]
 # endpoint = "zk://localhost/openvdc"
