--- a/ci/acceptance-test/multibox/10.0.100.14-vdc-executor-lxc/guestroot/etc/openvdc/executor.toml
+++ b/ci/acceptance-test/multibox/10.0.100.14-vdc-executor-lxc/guestroot/etc/openvdc/executor.toml
@@ -7,3 +7,21 @@ endpoint = "zk://10.0.100.10/openvdc"
 [bridges]
 	[bridges.linux]
 	name = "virbr0"
+  up-script = "linux-bridge-up.sh"
+	down-script = "linux-bridge-down.sh"
+
+	[bridges.ovs]
+	name = "br0"
+	up-script = "ovs-up.sh"
+	down-script = "ovs-down.sh"
+
+
+[executor-api]
+# listen = "0.0.0.0:19372"
+advertise-ip = "10.0.100.14"
+
+[console]
+
+[console.ssh]
+# listen = ""
+advertise-ip = "10.0.100.14"
