Don't show error for sources with "// +build acceptance"

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,5 +16,7 @@
       ],
       "url": "./schema/v1.json"
     }
-  ]
+  ],
+  // go formatter/lint called by vscode fails sources under ci/*.
+  "go.buildTags": "acceptance"
 }
