--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,9 +16,16 @@ install:
   # some helpful output for debugging builds
   - go version
   - go env
+  - cinst jdk8
+  - ps: New-Item C:\ZooKeeper -type directory
+  - powershell -ExecutionPolicy Bypass .\ci\appveyor\install-zk.ps1 C:\ZooKeeper
+  - ps: $ZkProcess = Start-Process C:\ZooKeeper\bin\zkServer -PassThru
 
 build_script:
   - set PATH=C:\gopath\bin;%PATH%
   - go run ./build.go
+
+on_finish:
+  - ps: Stop-Process -Id $ZkProcess.Id -ErrorAction Ignore
 
 deploy: off
