Add toml extesion to recommendation

--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "lukehoban.go",
     "zxh404.vscode-proto3",
     "1dot75cm.RPMSpec",
-    "PeterJausovec.vscode-docker"
+    "PeterJausovec.vscode-docker",
+    "be5invis.toml"
   ]
 }
