Added the management line to both executor and renamed the bridges to make clear which is which

--- a/ci/citest/acceptance-test/multibox/10.0.100.14-vdc-executor-lxc/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.14-vdc-executor-lxc/vmspec.conf
@@ -6,6 +6,7 @@ vnc_addr=
 vnc_port=12004
 serial=telnet:127.0.0.1:13004,server,nowait
 
-nics[0]="name=vdc_executor_lxc_tap hwaddr=52:56:01:00:05:05 bridge=vdc_env_br0"
+nics[0]="name=lxc_m hwaddr=52:56:01:00:05:05 bridge=vdc_mngnt"
+nics[1]="name=lxc_i hwaddr=52:56:01:00:06:05 bridge=vdc_insts"
 
 IP_ADDR=10.0.100.14
