--- a/ci/citest/acceptance-test/multibox/10.0.100.10-zookeeper/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.10-zookeeper/vmspec.conf
@@ -6,6 +6,6 @@ vnc_addr=
 vnc_port=12001
 serial=telnet:127.0.0.1:13001,server,nowait
 
-nics[0]="name=zookeeper_tap hwaddr=52:56:01:00:05:02 bridge=vdc_env_br0"
+nics[0]="name=zookeeper_tap hwaddr=52:56:01:00:05:02 bridge=vdc_mngnt"
 
 IP_ADDR=10.0.100.10
