--- a/ci/citest/acceptance-test/multibox/10.0.100.12-vdc-scheduler/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.12-vdc-scheduler/vmspec.conf
@@ -6,6 +6,6 @@ vnc_addr=
 vnc_port=12002
 serial=telnet:127.0.0.1:13002,server,nowait
 
-nics[0]="name=vdc_scheduler_tap hwaddr=52:56:01:00:05:03 bridge=vdc_env_br0"
+nics[0]="name=vdc_scheduler_tap hwaddr=52:56:01:00:05:03 bridge=vdc_mngnt"
 
 IP_ADDR=10.0.100.12
