--- a/ci/citest/acceptance-test/multibox/10.0.100.15-vdc-executor-lxc-ovs/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.15-vdc-executor-lxc-ovs/vmspec.conf
@@ -7,7 +7,7 @@ vnc_port=12005
 serial=telnet:127.0.0.1:13005,server,nowait
 
 #TODO: Give better mac addresses
-nics[0]="name=lxcovs_m hwaddr=52:56:01:00:05:06 bridge=vdc_env_br0"
-nics[1]="name=lxcovs_i hwaddr=52:56:01:00:05:07 bridge=vdc_env_br0"
+nics[0]="name=lxcovs_m hwaddr=52:56:01:00:05:06 bridge=vdc_mngnt"
+nics[1]="name=lxcovs_i hwaddr=52:56:01:00:06:06 bridge=vdc_insts"
 
 IP_ADDR=10.0.100.15
