Renamed some tap devices to make them shorter and more obvious what bridge they're on

--- a/ci/citest/acceptance-test/multibox/10.0.100.11-mesos-master/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.11-mesos-master/vmspec.conf
@@ -6,6 +6,6 @@ vnc_addr=
 vnc_port=12000
 serial=telnet:127.0.0.1:13000,server,nowait
 
-nics[0]="name=mesos hwaddr=52:56:01:00:05:01 bridge=vdc_mngnt"
+nics[0]="name=mesos_m hwaddr=52:56:01:00:05:01 bridge=vdc_mngnt"
 
 IP_ADDR=10.0.100.11
