--- a/ci/citest/acceptance-test/multibox/10.0.100.13-vdc-executor-null/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.13-vdc-executor-null/vmspec.conf
@@ -6,6 +6,6 @@ vnc_addr=
 vnc_port=12003
 serial=telnet:127.0.0.1:13003,server,nowait
 
-nics[0]="name=vdc_executor_null_tap hwaddr=52:56:01:00:05:04 bridge=vdc_mngnt"
+nics[0]="name=null_m hwaddr=52:56:01:00:05:04 bridge=vdc_mngnt"
 
 IP_ADDR=10.0.100.13
