Added additional config options

--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -1,7 +1,9 @@
 [hypervisor]
 # driver = "null"
 # script-path = "/etc/openvdc/scripts/"
-# image-server = "images.linuxcontainers.org"
+# image-server = "127.0.0.1/images"
+# error-log-path = "/etc/openvdc/"
+# cache-path = "/var/cache/lxc/"
 
 [zookeeper]
 # endpoint = "zk://localhost/openvdc"
