--- a/ci/citest/acceptance-test/multibox/10.0.100.14-vdc-executor-lxc/guestroot/etc/openvdc/executor.toml
+++ b/ci/citest/acceptance-test/multibox/10.0.100.14-vdc-executor-lxc/guestroot/etc/openvdc/executor.toml
@@ -1,6 +1,9 @@
 [hypervisor]
 driver = "lxc"
 script-path = "/etc/openvdc/scripts/"
+image-server = "10.0.100.12/images"
+error-log-path = "/etc/openvdc/"
+cache-path = "/var/cache/lxc/"
 
 [zookeeper]
 endpoint = "zk://10.0.100.10/openvdc"
