image-server->image-server-uri

--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -1,7 +1,7 @@
 [hypervisor]
 # driver = "null"
 # script-path = "/etc/openvdc/scripts/"
-# image-server = "127.0.0.1/images"
+# image-server-uri = "127.0.0.1/images"
 # error-log-path = "/etc/openvdc/"
 # cache-path = "/var/cache/lxc/"
 
