--- a/ci/citest/acceptance-test/multibox/10.0.100.16-vdc-executor-qemu/guestroot/etc/openvdc/executor.toml
+++ b/ci/citest/acceptance-test/multibox/10.0.100.16-vdc-executor-qemu/guestroot/etc/openvdc/executor.toml
@@ -1,8 +1,8 @@
 [hypervisor]
-driver = "lxc"
+driver = "qemu"
 script-path = "/etc/openvdc/scripts/"
 image-server-uri = "http://10.0.100.12/images"
-cache-path = "/var/cache/lxc/"
+cache-path = "/var/cache/qemu/"
 
 [zookeeper]
 endpoint = "zk://10.0.100.10:2181,10.0.100.11:2181,10.0.100.12:2181/openvdc"
