Chang kvm to qemu

--- a/ci/citest/acceptance-test/multibox/10.0.100.17-vdc-executor-qemu-ovs/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.17-vdc-executor-qemu-ovs/vmspec.conf
@@ -1,4 +1,4 @@
-vm_name="executor-kvm-ovs"
+vm_name="executor-qemu-ovs"
 cpu_type=qemu64,+"${ACCEL_TYPE}"
 mem_size=1024
 cpu_num=1
@@ -7,7 +7,7 @@ vnc_port=12007
 serial=telnet:127.0.0.1:13007,server,nowait
 
 #TODO: Give better mac addresses
-nics[0]="name=kvmovs_m hwaddr=52:56:01:00:05:08 bridge=vdc_mngnt"
-nics[1]="name=kvmovs_i hwaddr=52:56:01:00:06:08 bridge=vdc_insts"
+nics[0]="name=qemuovs_m hwaddr=52:56:01:00:05:08 bridge=vdc_mngnt"
+nics[1]="name=qemuovs_i hwaddr=52:56:01:00:06:08 bridge=vdc_insts"
 
 IP_ADDR=10.0.100.17
