--- a/ci/citest/acceptance-test/multibox/10.0.100.16-vdc-executor-qemu/vmspec.conf
+++ b/ci/citest/acceptance-test/multibox/10.0.100.16-vdc-executor-qemu/vmspec.conf
@@ -1,4 +1,4 @@
-vm_name="executor-kvm"
+vm_name="executor-qemu"
 cpu_type=qemu64,+"${ACCEL_TYPE}"
 mem_size=1024
 cpu_num=1
@@ -6,7 +6,7 @@ vnc_addr=
 vnc_port=12006
 serial=telnet:127.0.0.1:13006,server,nowait
 
-nics[0]="name=kvm_m hwaddr=52:56:01:00:05:07 bridge=vdc_mngnt"
-nics[1]="name=kvm_i hwaddr=52:56:01:00:06:07 bridge=vdc_insts"
+nics[0]="name=qemu_m hwaddr=52:56:01:00:05:07 bridge=vdc_mngnt"
+nics[1]="name=qemu_i hwaddr=52:56:01:00:06:07 bridge=vdc_insts"
 
 IP_ADDR=10.0.100.16
