Remove settings used by lxc, qemu uses qemu-ifup/ifdown scripts

--- a/ci/citest/acceptance-test/multibox/10.0.100.17-vdc-executor-qemu-ovs/guestroot/etc/openvdc/executor.toml
+++ b/ci/citest/acceptance-test/multibox/10.0.100.17-vdc-executor-qemu-ovs/guestroot/etc/openvdc/executor.toml
@@ -6,13 +6,8 @@ script-path = "/etc/openvdc/scripts/"
 endpoint = "zk://10.0.100.10:2181,10.0.100.11:2181,10.0.100.12:2181/openvdc"
 
 [bridges]
-	[bridges.linux]
-
-	[bridges.ovs]
-        name = "br0"
-	up-script = "ovs-up.sh.tmpl"
-	down-script = "ovs-down.sh.tmpl"
-
+name = "br0"
+type = "ovs"
 
 [executor-api]
 # listen = "0.0.0.0:19372"
