Added the local image configuration to the lxc ovs node on the CI

--- a/ci/citest/acceptance-test/multibox/10.0.100.15-vdc-executor-lxc-ovs/guestroot/etc/openvdc/executor.toml
+++ b/ci/citest/acceptance-test/multibox/10.0.100.15-vdc-executor-lxc-ovs/guestroot/etc/openvdc/executor.toml
@@ -1,6 +1,8 @@
 [hypervisor]
 driver = "lxc"
 script-path = "/etc/openvdc/scripts/"
+image-server-uri = "http://10.0.100.12/images"
+cache-path = "/var/cache/lxc/"
 
 [zookeeper]
 endpoint = "zk://10.0.100.10:2181,10.0.100.11:2181,10.0.100.12:2181/openvdc"
