Added config option for esxihost ssh-key

--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -11,6 +11,7 @@
 # esxi-pass = ""
 # esxi-ip = ""
 # esxi-insecure = true
+# esxi-host-sshkey = ""
 
 [zookeeper]
 # endpoint = "zk://localhost/openvdc"
