--- a/pkg/conf/scheduler.toml
+++ b/pkg/conf/scheduler.toml
@@ -13,3 +13,6 @@
 # name = "openvdc"
 # failover-timeout = 604800 #1 week
 # executor-path = "openvdc-executor"
+
+[resource-collector]
+# endpoint = "0.0.0.0:9092"
