--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -14,6 +14,7 @@
 # esxi-insecure = true
 # esxi-host-sshkey = ""
 # esxi-easy-clone = false
+# esxi-host-name = ""
 # esxi-vm-user = ""
 # esxi-vm-pass = ""
 # esxi-vm-datastore = ""
