Added modules subfield to config files
Using vCenter as the endpoint means that there is possibilities of
integration with a datacenter. This should make the management of
future features easier

--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -18,7 +18,8 @@
 # esxi-vm-pass = ""
 # esxi-vm-datastore = ""
 # esxi-inventory-folder = ""
-# vCenter = false
+	[hypervisor.modules]
+	# vcenter = true
 
 [zookeeper]
 # endpoint = "zk://localhost/openvdc"
