Revert and add prefix to vcenter flag

--- a/pkg/conf/executor.toml
+++ b/pkg/conf/executor.toml
@@ -18,8 +18,7 @@
 # esxi-vm-pass = ""
 # esxi-vm-datastore = ""
 # esxi-inventory-folder = ""
-	[hypervisor.modules]
-	# vcenter = true
+# esxi-vcenter = false
 
 [zookeeper]
 # endpoint = "zk://localhost/openvdc"
