--- a/pkg/conf/scheduler.toml
+++ b/pkg/conf/scheduler.toml
@@ -12,4 +12,5 @@
 # id = "scheduler_1"
 # name = "openvdc"
 # failover-timeout = 604800 #1 week
+# checkpoint = true
 # executor-path = "openvdc-executor"
